ci: remove joi 13 test from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ node_js:
 env:
   - HAPI=hapi@17
   - HAPI=hapi@18
-  - JOI=joi@14
-  - JOI-joi@13
 before_script:
-  - npm install --save-dev $HAPI $JOI
+  - npm install --save-dev $HAPI
 after_script:
   - "npm run test-cov-coveralls"
